--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [    "heroku"],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,5 +15,9 @@
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1"
+  },
+  "engines": {
+    "node": "20.12"
   }
+  
 }
