--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 uri = "mongodb+srv://sonnguyenyamakun:V0x82B2gjfy4tR6b@dadn.bwepi3i.mongodb.net/?retryWrites=true&w=majority&appName=DADN"
+PORT = 4444
